# akita-libs

./: .gitignore  README.md  go.mod  go.sum
.circleci/: config.yml
akid/: akid_base.go  akid_test.go  akids.go
akinet/: README.md  har.go  har_test.go  net_traffic.go  std.go  tcp.go  tcp_parser.go  tcp_parser_test.go  tee.go  tls.go
akiuri/: README.md  akiuri.go  akiuri_test.go
api_schema/: schema.go  tcp_conn.go  tls_handshake.go
batcher/: README.md  in_memory.go  in_memory_test.go  types.go
daemon/: logging_options.go
github/: parse.go  types.go
gitlab/: types.go
memview/: memview.go  memview_test.go
path_pattern/: README.md  components.go  pattern.go  pattern_test.go
pbhash/: pbhash.go  pbhash_test.go
sampled_err/: sampled_err.go
spec_summary/: schema.go  summarize.go  summarize_test.go
spec_util/: README.md  categorize.go  categorize_test.go  classify.go  const_prop.go  const_prop_test.go  constructors.go  data_type_id.go  data_type_id_test.go  equiv.go  equiv_test.go  flatten.go  generalize_witnesses.go  generalize_witnesses_test.go  hash_keys.go  hash_keys_test.go  http.go  iter_map_in_order.go  matcher.go  meld.go  (+14 more)
visitors/http_rest/: BUILD.bazel  field_location.go  field_path.go  http_rest_spec_pair_visitor.go  http_rest_spec_pair_visitor_context.go  http_rest_spec_visitor.go  http_rest_spec_visitor_context.go  http_rest_spec_visitor_test.go  normalize_arg_names.go  normalize_arg_names_test.go  spec_pair_visitor.go  spec_pair_visitor_context.go  spec_visitor.go  spec_visitor_context.go  spec_visitor_default.go  spec_visitor_test.go
(+201 files in other folders)
